# dekopos

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
common-data/: Cargo.toml
common-data/src/: graphic.rs  lib.rs  mmap.rs
hello/day01/: Cargo.toml
hello/day01/.cargo/: config.toml
hello/day01/src/: main.rs
hello/literal-expander/: Cargo.toml
hello/literal-expander/src/: lib.rs
hello/literal-expander/tests/: test.rs
kernel/: Cargo.toml  build.rs  x86_64-unknown-elf.json
kernel/.cargo/: config.toml
kernel/asm/: asm.s
kernel/src/: data_types.rs  graphic.rs  main.rs  services.rs  util.rs  x64.rs
kernel/src/devices/: error.rs  interrupts.rs  io.rs  mod.rs
kernel/src/devices/pci/: common.rs  error.rs  mem.rs  mod.rs  msi.rs  services.rs
kernel/src/devices/usb/: context.rs  controller.rs  data_types.rs  device.rs  driver.rs  error.rs  mem.rs  mod.rs  ring.rs  status.rs  utils.rs
kernel/src/devices/usb/class/: driver.rs  mod.rs
kernel/src/devices/usb/class/hid/: keyboard.rs  mod.rs  mouse.rs
kernel/src/devices/usb/data_types/: context.rs  descriptor.rs  endpoint.rs  mod.rs  request.rs
kernel/src/devices/usb/xhci/: context.rs  device.rs  mod.rs  ring.rs
kernel/src/graphic/: console.rs  font.rs  mod.rs
kernel/src/graphics/: console.rs  frame_buffer.rs  mod.rs  paint.rs
kernel/src/mem/: alloc.rs
kernel/src/services/: globals.rs  logging.rs  mod.rs
kernel/src/utils/: align.rs  helpers.rs  macros.rs  mod.rs  volatile.rs
loader/: Cargo.toml
loader/.cargo/: config.toml
loader/src/: boot.rs  fs.rs  graphic.rs  main.rs
