[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.1"
common-data = { version = "0.1.0", path = "../common-data" }
derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign", "not"] }
log = "0.4.16"
modular-bitfield = "0.11.2"
num-traits = { version = "0.2.14", default-features = false }

[build-dependencies]
thiserror = { version = "1.0" }
