[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accessor = "0.3.3"
anyhow = { version = "1.0.58", default-features = false }
bit_field = "0.10.1"
bitvec = { version = "1.0.1", default-features = false, features = ["atomic", "alloc"] }
common-data = { version = "0.1.0", path = "../common-data" }
derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign", "not"] }
heapless = "0.7.10"
log = "0.4.16"
modular-bitfield = "0.11.2"
num-traits = { version = "0.2.14", default-features = false }
paste = "1.0.7"
spin = "0.9.2"
x86_64 = "0.14.9"
xhci = "0.8.6"

[build-dependencies]
thiserror = { version = "1.0" }
