[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-data = { version = "0.1.0", path = "../common-data", features = ["uefi_imp"] }
goblin = { version = "0.5.1", features = ["elf32", "elf64", "endian_fd"], default-features = false }
log = "0.4.16"
uefi = { version = "0.15.2", features = ["alloc", "exts", "logger"] }
uefi-services = "0.12.1"
